# METCS777-GenAIForTheme

./: .gitignore  README.md  Test.ipynb  configs.py  pyproject.toml  requirements.txt
configs/: experiment_1.yaml  experiment_2.yaml  experiment_3.yaml  experiment_4.1.yaml  experiment_4.yaml
examples/: data_preprocess_spark.ipynb  train_stable_diffusion_with_parquet.ipynb
model/: __init__.py  model.py  utils.py
notebooks/: configs.py  data_preprocess_spark.ipynb  generate_metadata.ipynb  preprocess_images.ipynb  preprocess_metadata.ipynb  train_stable_diffusion.ipynb  train_stable_diffusion_with_colab.ipynb  train_stable_diffusion_with_parquet.ipynb
pipeline/: data_preprocess_on_emr.py  data_preprocess_spark.py  generate_metadata.py  inference.py  preprocess.py  preprocessing_on_localmachine.py  scrape_harvardmuseumAPI.ipynb  scrape_harvardmuseumAPI.py  scrape_metropolitanmuseum.py  scrape_smithsonianmuseumAPI.ipynb  scrape_smithsonianmuseumAPI.py  train.py
scrape/: scrape_natonal_palace_museum.py  scrape_palace_musuem.py
shell/: init_runpod.sh  install_package.sh
